- Fix bug #33299 (php:function no longer handles returned dom objects) - maybe fix #33431/33432

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@189038 c90b9560-bf6c-de11-be94-00142212c4b1